--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.11",
         "doctrine/doctrine-bundle": "^2.2",
@@ -19,13 +20,13 @@
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
         "symfony/serializer": "5.2.*",
         "symfony/stopwatch": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
         "symfony/validator": "5.2.*",
         "symfony/web-profiler-bundle": "5.2.*",
-        "symfony/yaml": "5.2.*",
-        "ext-json": "*"
+        "symfony/yaml": "5.2.*"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.25"
