--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "bilemo",
+    "description": "Api for Openclassrooms Project",
     "type": "project",
     "license": "proprietary",
     "minimum-stability": "dev",
@@ -30,6 +32,8 @@
         "symfony/yaml": "5.2.*"
     },
     "require-dev": {
+        "roave/security-advisories": "dev-latest"
+        ,
         "symfony/maker-bundle": "^1.25"
     },
     "config": {
