Update composer json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bilemo",
+    "name": "kenolane/bilemo",
     "description": "Api for Openclassrooms Project",
     "type": "project",
     "license": "proprietary",
