--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,18 +1,26 @@
 security:
+    providers:
+        users:
+            entity:
+                class: App\Entity\User
+                property: email
+    encoders:
+        App\Entity\User:
+            algorithm: auto
     firewalls:
-
         login:
             pattern:  ^/api/login
             stateless: true
             anonymous: true
             json_login:
+                username_path: email
                 check_path:               /api/login_check
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
-
         api:
             pattern:   ^/api
             stateless: true
+            provider: users
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
@@ -20,3 +28,4 @@ security:
     access_control:
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+        - { path: ^/products,  roles: IS_AUTHENTICATED_FULLY }
