--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "jms/serializer-bundle": "^3.7",
         "lexik/jwt-authentication-bundle": "^2.11",
         "sensio/framework-extra-bundle": "^5.6",
+        "symfony/cache": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
@@ -27,6 +28,7 @@
         "symfony/serializer": "5.2.*",
         "symfony/stopwatch": "5.2.*",
         "symfony/twig-bundle": "5.2.*",
+        "symfony/uid": "5.2.*",
         "symfony/validator": "5.2.*",
         "symfony/web-profiler-bundle": "5.2.*",
         "symfony/yaml": "5.2.*"
