--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,13 +4,25 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
+        customers:
+            entity:
+                class: App\Entity\Customer
+                property: email
+        chain_provider:
+            chain:
+                providers: [ 'users', 'customers' ]
+
     encoders:
         App\Entity\User:
+            algorithm: auto
+
+        App\Entity\Customer:
             algorithm: auto
     firewalls:
         login:
             pattern:  ^/api/login
             stateless: true
+            provider: users
             anonymous: true
             json_login:
                 username_path: email
@@ -26,6 +38,6 @@ security:
                     - lexik_jwt_authentication.jwt_token_authenticator
 
     access_control:
+        - { path: ^/v1,  roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
-        - { path: ^/products,  roles: IS_AUTHENTICATED_FULLY }
