--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -12,6 +12,8 @@ fos_rest:
 #            App\Exception\MyException: Forbidden area.
     body_converter:
         enabled: true
+        validate: true
+        validation_errors_argument: violations
     format_listener:
         rules:
             - { path: ^/, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
