--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
         "lexik/jwt-authentication-bundle": "^2.11",
+        "nelmio/api-doc-bundle": "^4.3",
         "sensio/framework-extra-bundle": "^5.6",
+        "symfony/asset": "5.2.*",
         "symfony/cache": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
