--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,10 @@
 #    controller: App\Controller\DefaultController::index
 api_login_check:
   path: /api/login_check
+
+# config/routes.yaml
+app.swagger_ui:
+  path: /doc
+  methods: GET
+  defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
+
