--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -19,5 +19,6 @@ nelmio_api_doc:
             - ApiKeyAuth: []
     areas: # to filter documented areas
         path_patterns:
+            - api/login_check
             - /api/v1
             - /v1/
