--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "doctrine/orm": "^2.8",
         "friendsofsymfony/rest-bundle": "^3.0",
         "jms/serializer-bundle": "^3.7",
+        "knplabs/knp-paginator-bundle": "^5.6",
         "lexik/jwt-authentication-bundle": "^2.11",
         "nelmio/api-doc-bundle": "^4.3",
         "sensio/framework-extra-bundle": "^5.6",
